<resources>
    <string name="app_name">Hackito</string>
    <string name="sample_comment">Aw shucks, guys ... you make me blush with your compliments.</string>
    <string name="loading_text">Loading data..</string>
    <string name="error_text">Oops, something happened..</string>
    <string name="no_replies">No replies yet</string>
    <string name="error_main">Failed to connect to the server</string>
    <string name="try_again">Try again</string>
    <string name="url_empy">Url is empty</string>
    <string name="back_notice">Please click BACK again to exit or</string>
    <string name="exit">EXIT</string>
</resources>
