...
            android:id="@+id/iv_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_comment"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/tv_reply"
            app:srcCompat="@drawable/ic_reply_24dp" />

        <TextView
            android:id="@+id/tv_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
